ES Translation, Correction

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -21427,7 +21427,7 @@
       </notes>
       <segment>
         <source>Diese Aktion ermöglicht es dir, die Tiefen dieses Gebäude zu erkunden und wertvolle Ressourcen zu bergen. Sei aber nicht zu gierig, denn deine Zeit ist begrenzt!</source>
-        <target>Explora bien el edificio, podríás encontrar recursos importantes, pero se prudente, ¡el tiempo es limitado!</target>
+        <target>Explora bien el edificio, podrías encontrar recursos importantes, pero se prudente, ¡el tiempo es limitado!</target>
       </segment>
     </unit>
     <unit id="AGQV69U" name="Das Gebäude betreten? (Diese Aktion kostet 1AP)">
