ES Translation, Correction

--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -5387,7 +5387,7 @@
       </notes>
       <segment>
         <source>Ein bedrucktes Bündel Papierscheine und ein paar Kupferstücke. Beides diente früher mal als Währung, doch hier ist es wertlos. Alles, was du nicht essen oder dir ins Blut spritzen kannst ist uninteressant...</source>
-        <target>Un montón de papelitos con números y dibujos impresos, que alguna vez sirvieron como salario. Hy, todo lo que no se come o no te protege no vale nada...</target>
+        <target>Un montón de papelitos con números y dibujos impresos, que alguna vez sirvieron como salario. Hoy, todo lo que no se come o no te protege no vale nada...</target>
       </segment>
     </unit>
     <unit id="DcBZypf">
